--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
-    "expo": "~53.0.8",
+    "expo": "53.0.9",
     "expo-camera": "~16.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-document-picker": "^13.1.5",
